# loopback

./: .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
loopback/api/: api_router.py
loopback/api/v1/: health.py  users_sellers.py
loopback/core/: config.py  logging.py  middlewares.py  utils.py
loopback/crud/: base.py  users_sellers.py
loopback/db/: base_class.py  session.py
loopback/db/migrations/: env.py
loopback/db/migrations/versions/: 8da8502c25cd_initial_migration.py
loopback/db/models/: __init__.py  order.py  place_shop.py  products.py  users_sellers.py
loopback/schemas/: users_sellers.py
loopback/service_email/: smtp.py
service_loopback/: app.py
service_loopback/api/: __init__.py  exceptions.py
service_loopback/api/v1/: users_sellers.py
service_loopback/db/: alembic_base.py
service_loopback/db/migrations/versions/: 70ad4b041ec7_main_migration.py
